research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__condition__tests__command_condition_is_parsed.snap
---
source: sdl-parser/src/condition.rs
expression: condition
---
Condition {
    name: None,
    command: Some(
        "executable/path.sh",
    ),
    interval: Some(
        30,
    ),
    source_helper: None,
    source: None,
    description: None,
    environment: None,
}
