research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__condition__tests__conditions_are_mapped_correctly.snap
---
source: sdl-parser/src/condition.rs
expression: conditions
---
condition-1:
  name: ~
  command: executable/path.sh
  interval: 30
  source: ~
  description: ~
  environment: ~
condition-2:
  name: ~
  command: ~
  interval: ~
  source:
    name: digital-library-package
    version: "*"
  description: ~
  environment: ~

