research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__condition__tests__library_condition_is_parsed.snap
---
source: sdl-parser/src/condition.rs
expression: condition
---
Condition {
    name: None,
    command: None,
    interval: None,
    source_helper: Some(
        ShortSource(
            "digital-library-package",
        ),
    ),
    source: None,
    description: None,
    environment: None,
}
